commit before making big changes

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <header id="masthead">
+  <header id="masthead"></header>
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
