--- a/index.html
+++ b/index.html
@@ -1,46 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>About | Your Name</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script src="https://kit.fontawesome.com/2989b45058.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>About | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
+  <body>
 
-<body>
+    <div id="main-container" class="container clearfix::after ">
+      
+      <div class="card row justify-content-left col-lg-3 col md-12 col-sm-12" id="image-card">
+        <div class="card-body">
+          <h1 class="card-title">Michael Harris</h1>
+          <h4 style="font-size:15px" class="card-text">Process Development</h4>
+        </div>
+        <img
+          class="card-img-top"
+          src="assets/images/profile.jpg"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <p class="card-text">
+            Successfully engage process owners in business transformation,
+            deploying web-based analytics to drive superior performance.
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+      <div>
+        <header id="masthead">
+          <div class="col-lg-9 col-md-12 col-sm-12">
+            <nav
+              class="container navbar navbar-expand-lg navbar-light bg-white"
+            >
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ">
+                  <li class="nav-item active">
+                    <a class="home-btn" href="#home"
+                      ><i class="fas fa-home fa-lg" aria-hidden="true"></i
+                    ></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="fb" href="#"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="tw" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="ins" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+                  </li>
+                  <li class="nav-item">
+                    <a class="dr" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>    
+                    </li>  
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </header>
+        <section class="main-section about-me">
+          <h1>About Me</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+            vestibulum luctus felis, ac rhoncus nunc porttitor condimentum.
+            Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin
+            vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum
+            consectetur euismod. Proin commodo purus vitae sollicitudin
+            consectetur.
+          </p>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+          <p>
+            Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices,
+            ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar
+            quam eget, egestas mauris.
+          </p>
+
+          <p>
+            Suspendisse dictum, arcu at convallis faucibus, quam sapien
+            tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius
+            natoque penatibus et magnis dis parturient montes, nascetur
+            ridiculus mus.
+          </p>
+        </section>
+      </div>
+      <footer>
+        <div class="container">
+          Copyright &copy;
+        </div>
+      </footer>
     </div>
-  </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
-    </section>
-
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy; 
-    </div>
-  </footer>
-</body>
-
+  </body>
 </html>
